# Compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-release.sh  main.cpp
.circleci/: config.yml
.github/workflows/: codeql.yml
include/: ast.h  ast.hpp  baseast.hpp  eeast.hpp  eeoptim.hpp  eerep.hpp  error.hpp  flow.hpp  genee.hpp  geneey.hpp  gentg.hpp  global.hpp  optimee.hpp  optimtg.hpp  parser.hpp  parser.tab.hpp  strtab.hpp  symtab.hpp  tgast.hpp  tgrep.hpp  token.hpp
src/: ast.cpp  baseast.cpp  eeast.cpp  eeoptim.cpp  eerep.cpp  error.cpp  flow.cpp  genee.cpp  geneey.cpp  gentg.cpp  global.cpp  lex.l  lex.yy.cpp  main.cpp  optimee.cpp  optimtg.cpp  parser.cpp  parser.hpp  parser.tab.cpp  parser.y  scanner.cpp  scanner.l  strtab.cpp  symtab.cpp  tgast.cpp  tgoptim.cpp  tgrep.cpp
test/: log.txt  log_all_optim.txt  log_dce_optim.txt  log_no_optim.txt  log_ssa_optim.txt  log_tg_optim.txt  test.py  test_parser_linux.py  test_parser_windows.py  test_scanner.py  test_scanner_linux.py
test/test_sample/: 001_var_defn.sy  014_add.sy  017_sub.sy  030_if_test3.sy  031_if_test4.sy  032_if_test5.sy  040_while_if_test2.sy  043_op_priority1.sy  044_op_priority2.sy  052_comment1.sy  054_hex_defn.sy  065_sort_test5.sy  069_greatest_common_divisor.sy  071_exchange_array.sy  074_matrix_add.sy  075_matrix_sub.sy  076_matrix_mul.sy  077_matrix_tran.sy  080_color.sy  100_array_concat.sy  102_line_search.sy  81_go_upstairs.sy  83_accumulate.sy  84_last_word_length.sy  85_multi.sy  86_max_subsequence_sum.sy  88_exchange_value.sy  91_int_factor_sum.sy  92_unique_path.sy  94_lcm.sy  97_enc_dec.sy  98_palindrome_number.sy  99_bin_search.sy
